fixed slide-content issue and flex issue on safari

--- a/inc/elementor/assets/SCSS/modules/_clearings.scss
+++ b/inc/elementor/assets/SCSS/modules/_clearings.scss
@@ -3,15 +3,12 @@
 .container::before,
 .container::after,
 .container-fluid::before,
-.container-fluid::after,
-.tg-row::before,
-.tg-row::after {
+.container-fluid::after {
 	display: table;
 	content: "";
 }
 .clearfix::after,
 .container::after,
-.container-fluid::after,
-.tg-row::after {
+.container-fluid::after {
 	clear: both;
 }
